# robust-CE

./: LICENSE  README.md  setup.cfg
experiments/: Datasets.py  RCE test.ipynb  diabetes_experiments.ipynb  experiments.ipynb  ionosphere_experiments-Copy1.ipynb
experiments/.ipynb_checkpoints/: RCE test-checkpoint.ipynb  diabetes_experiments-checkpoint.ipynb  ionosphere_experiments-Copy1-checkpoint.ipynb
experiments/results_banknote/: banknote_results_l2_01.txt  banknote_results_l2_05.txt  banknote_results_linf_01.txt  banknote_results_linf_05.txt
experiments/results_banknote/cart/: model.csv
experiments/results_banknote/gbm/: model.csv
experiments/results_banknote/linear/: model.csv
experiments/results_banknote/mlp/: model.csv
experiments/results_banknote/rf/: model.csv
experiments/results_diabetes/: diabetes_results_l2.txt  diabetes_results_l2_01.txt  diabetes_results_linf_01.txt  diabetes_results_linf_05.txt
experiments/results_diabetes/cart/: model.csv
experiments/results_diabetes/gbm/: model.csv
experiments/results_diabetes/linear/: model.csv
experiments/results_diabetes/mlp/: model.csv
experiments/results_diabetes/rf/: model.csv
experiments/results_ionosphere/: ionosphere_results_l2_01.txt  ionosphere_results_l2_05.txt  ionosphere_results_linf_01.txt  ionosphere_results_linf_05.txt
experiments/results_ionosphere/cart/: model.csv
experiments/results_ionosphere/gbm/: model.csv
experiments/results_ionosphere/linear/: model.csv
experiments/results_ionosphere/mlp/: model.csv
rce/: __init__.py  generate_ce.py  utils.py
src/: rce.py
(+3 files in other folders)
