[metadata]
name = rce
version = 0.0.1
description = Robust Counterfactual Explanations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/donato-maragno/robust-CE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires = 
    pandas
    scikit-learn
    pyomo
    matplotlib
    openpyxl